--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
-    android:background="@android:color/darker_gray"
     tools:context=".ui.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,15 +12,13 @@
         layout="@layout/add_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="170dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@android:color/background_light"
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="match_parent"/>
 
 
         <android.support.design.widget.AppBarLayout
