--- a/app/src/main/res/layout/add_content.xml
+++ b/app/src/main/res/layout/add_content.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_marginTop="60dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
+    tools:context=".ui.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
         <TableLayout
                     android:layout_width="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -38,6 +42,7 @@
                             android:textColor="@android:color/background_dark"
                             android:inputType="textMultiLine"
                             android:ems="10"
+                            android:maxLines="2"
                             android:id="@+id/editName" />
 
                     </TableRow>
@@ -60,6 +65,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingEnd="50dp"
+                            android:maxLines="1"
                             android:hint="Type valid ID"
                             android:textStyle="bold"
                             android:textColor="@android:color/background_dark"
@@ -71,16 +77,24 @@
 
                 </TableLayout>
 
-    </android.support.v7.widget.CardView>
-
     <Button
         android:id="@+id/btn_add"
+        android:textAlignment="center"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="Add"
         android:theme="@style/Button"
-        />
+        android:onClick="buttonClick"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
